Make Lighthouse a PWA that is installable

--- a/Lighthouse.Frontend/index.html
+++ b/Lighthouse.Frontend/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#30574e" />
+    <meta name="description" content="Lighthouse Frontend Application" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
     <title>Lighthouse</title>
 </head>
 <body>
